# syncsenta-studio

./: .env.example  .gitignore  .replit  AGENTS.md  AI_ARCHITECTURE_PLAN.md  CODESPACES_FIX.md  CODESPACES_READY.md  CODESPACES_STATUS.md  DEPLOY_MVP.md  EMOTIONAL_INTELLIGENCE_FEATURE.md  FRONTEND_CONFLICT_REPORT.md  Fine_tune_Gikuyu_Mwalimu.ipynb  GIKUYU_IMPLEMENTATION_SUMMARY.md  GIKUYU_INTEGRATION_SUMMARY.md  INSTALL_OLLAMA_CODESPACES.md  KENYA_LLM_INTEGRATION_SUMMARY.md  MERGE_ANALYSIS.md  MERGE_COMPLETE.md  METAMASK_ERROR_FIX.md  MOVE_TO_CODESPACES.md  MVP_IMPLEMENTATION_COMPLETE.md  MVP_PIVOT_SUMMARY.md  MVP_README.md  MVP_STATUS.md  README.md  RENDER_DEPLOYMENT.md  STUDENT_BUILD_README.md  STUDENT_BUILD_STATUS.md  STUDENT_CHATBOT_ARCHITECTURE.md  SYNCSENTA_STUDIO_README.md  SYSTEM_RUNNING_STATUS.md  SYSTEM_TEST_REPORT.md  TEACHER_DASHBOARD_TESTING.md  TESTING_GUIDE.md  TESTING_SESSION_SUMMARY.md  app.py  cleanup_dev_files.sh  cleanup_unused.sh  data-pipeline-strategy.md  immediate-action-plan.md  (+9 more)
ai-agents/: .env.example  .gitignore  README.md  pyproject.toml
ai-agents/docs/: MODEL_DEPLOYMENT.md
ai-agents/scripts/: deploy_models.py
ai-agents/src/syncsenta_agents/: __init__.py  api.py  main.py
ai-agents/tests/: __init__.py  conftest.py  test_assessment_agent.py  test_core.py  test_failure_recovery.py  test_inference.py  test_model_deployment.py  test_orchestrator.py  test_property_edge_inference.py
ai-training/: Cargo.toml  README.md
ai-training/scripts/: setup_amd_training.py  train_cbc_model.py
ai-training/src/: dataset.rs  lib.rs
backend/: Cargo.toml
backend/syncsenta-backend/: Cargo.toml  RBAC_USAGE.md  TASK_10.1_COMPLETION.md  TASK_2.1_COMPLETION.md  TASK_2.4_COMPLETION.md  TASK_2.7_COMPLETION.md  TASK_2.8_COMPLETION.md  TASK_2.9_COMPLETION.md  TASK_2_METTA_CORE_COMPLETION.md  TASK_9.2_COMPLETION.md  libapproval_chain_tests.rlib
backend/syncsenta-backend/.sqlx/: query-03f576fe38d8a13611526a17a258947b3eb9affefdd9e68d2c8908e55116dfdc.json  query-07ef7f2f0f4734c73b22207c46c5c9e24a17fa9b9696c5f75b929ac7c3477483.json  query-0f7e053a12925234f328102adc71d07c40306297aa034d374ca338c7f43e211b.json  query-0fa54941e914c1dade50852d6da447dcb5bcf42b8fa906f5cc36f42eb88e0d01.json  query-16a2f7274e3744fa395689efb99e18c1f93860174fad7c1887b1d03e5bc7d9ac.json  query-1838929a3b7a5aad4349dfcdecc8313b68fa862a95f042a7c201d24bb5f1d192.json  query-215a8b2665d77e99805a68bddb04545fa10a0334753612ffedaf7dd568263d38.json  query-22f616a702fe01aa44c2ddca8873577069e3dd5591c8b94ef1762a3a9fb0ab14.json  query-2cbd99e6f8d036097a6803b46e6c98db00ebb7a707ab57a4fac13f43520b32d1.json  query-31a91ca3e4e2b88db744efc1d79f417b096c6d20376d7fa440757145f96551d8.json  query-345834263fb72cc5c3a23b0eaf787dec0cede0e089bcc944597ee6c4de7dcd17.json  query-35aaa4669615cb23b5fee2d792dcf724d04e2c0acb87342a64feec430db21a86.json  query-4ca904b2fceb6ca06a8850a524dc96273f100f67f8226f46275a5b28c5b7c808.json  query-59032e399fa5e23c62febe9c4636aaeb8744159c2d41e3828cbd5b259700851e.json  query-5d36301c7469e60318bc59040904acb4f126a9b5a10e3fe42d8f17e236eacc8e.json  query-5f029e2f4eb02ce7e1fbcb4589490cde8d8e32b445155b9ae0aba57dc4363816.json  query-5f0b8b5a0bc7bdb9c9c9cf9403923b0a144bab01aa3ccdd62f713483f3d06bc1.json  query-5fbf59b99950bc167e210cbe234e291d5fb5838d652f2f480fbb11be18631acf.json  query-61e8a6108410dcfe85c0060c02f8e888a04277e70c29a643b9d216945d50020a.json  query-668b26462912abce3e9c05ae92a3a285ee205b516657c76c862c33210b0d0a7d.json  query-6d9c07ef6b16c93679354ee438f95abc87d855b56e98519800ba0ace940e3084.json  query-7273501e549ddfcf1e73e8760c8a3b4b46715c5934388dd6415b91e31e2af000.json  query-75bb91b0f745080b9e7d6445e7d4722b21916265d510a26edf6f9aca1fe5a823.json  query-7c02554bd6605d5ce431b04e498b13accf79ed79a8d5b913fb5ca647e35e3d49.json  query-8044ff5b624089351c07cd98b07642afb8314f972048de7c769340d22c6fec7f.json  query-80642dac5b60c240bb900271792dc6a70cb49f0e3ce08571f96b8129d8cca803.json  query-87c63d7e2ba902bfe3bbe20dd3dc2ab61e47023b9b4a009b574818e449164631.json  query-8941789e3419d1a3aaca2e74fe3fc2245383c9c2d021967470786ea5462aff81.json  query-8bcddf425dd9bc9ff0916e658d129fc9a729079737e13393be7d15e70b334f36.json  query-90ec69b73e92b7f86b9c1cb12db79f5eb15d764a1e19c935243508b1dcd7c52e.json  query-9531f3b57cdf3a9735a19977865c62cb21db1a68e340b2496428f0db3c0d2480.json  query-9a36ac9a25e95b6448695d74a094d643cc69d0cfd8fa24b6d2cad5afa5475949.json  query-a360ee489c514c52ce0588c16587e200754561bddf522f23de092960f4e3be8d.json  query-aa117faf01f08f3631727532fbc2552aa426928f600f35d10d7226d6bd5b53c6.json  query-b530e4d96ca97093da6833ec6f9ba2d962b43c2fcb1bb2c090d798531d643d26.json  query-cce8566f686cb0412187d915df5024d06d2c16145c55a1ab632f675fb4da797b.json  query-d3c819798694cde6b32da760c722a723a360216a2eba60df7d3344ae53af65c4.json  query-d56e91e979827437e2964385aa95e61bae9dd954c9a1e289b828b34c351c57c2.json  query-dba7c9fdbca6910cb6696761d1206433d88dd3dfe6186e1b16c5e9b33381219c.json  query-dbb776a57e290cc18aa1ca723e07f07e8a274142a9053364dae8a27670b5f470.json  (+5 more)
backend/syncsenta-backend/data/: cbc_terms.json  metta_rules.metta
backend/syncsenta-backend/examples/: approval_chain_proptest.rs  rbac_example.rs
backend/syncsenta-backend/migrations/: 20260426000001_initial_schema.sql  20260427000002_auth_improvements.sql  20260428000003_comprehensive_schema.sql  20260429000004_web4_infrastructure.sql  20260429000005_refresh_user_profiles_view.sql  20260430000006_ipfs_cid_fields.sql  20260430000007_rls_and_seed.sql  20260501000008_metta_atoms.sql
backend/syncsenta-backend/src/: config.rs  db.rs  lib.rs  main.rs  routes.rs
backend/syncsenta-blockchain/: Cargo.toml  hardhat.config.ts  package.json
backend/syncsenta-blockchain/contracts/: ApprovalRegistry.sol  ContentRegistry.sol  PartnerPool.sol  SyncSentaCredentials.sol  SyncToken.sol
backend/syncsenta-blockchain/scripts/: deploy.ts
backend/syncsenta-blockchain/src/: contracts.rs  ipfs.rs  lib.rs  types.rs
backend/syncsenta-blockchain/test/: contracts.test.ts
backend/syncsenta-common/: Cargo.toml  TASK_2.6_COMPLETION.md
backend/syncsenta-wasm/: Cargo.toml
(+470 files in other folders)
