[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langgraph>=1.1.10",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]
